re-enable suggestions

--- a/system/50x.html
+++ b/system/50x.html
@@ -80,26 +80,15 @@
     </head>
 
     <body>
-        <h1><strong>School Votes</strong></h1>
+        <h1><strong>SCHOOL VOTES SERVER IS BUSY</strong></h1>
 
         <div class="content">
 
-            <h3>The page you are looking for is temporarily unavailable.  Please try again later.</h3>
+            <h3>Sorry, the School Votes server is under heavy load.  Please try again later.</h3>
 
             <div class="alert">
-                <h2>Website Administrator</h2>
                 <div class="content">
-                    <p>Something has triggered an error on your
-                    website.  This is the default error page for
-                    <strong>nginx</strong> that is distributed with
-                    the Amazon Linux AMI.  It is located at
-                    <tt>/usr/share/nginx/html/50x.html</tt></p>
-
-                    <p>You should customize this error page for your own
-                    site or edit the <tt>error_page</tt> directive in
-                    the <strong>nginx</strong> configuration file
-                    <tt>/etc/nginx/nginx.conf</tt>.</p>
-
+                    <p>The School Votes server is busy. Please try again in a few minutes.</p>
                 </div>
             </div>
 
